components/atom/button/src/index.scss
@import '~@schibstedspain/sui-theme/lib/index';

$bgc-atom-button: $c-primary !default;
$bgc-atom-button-light: color-variation($bgc-atom-button, 4) !default;
$bgc-atom-button-dark: color-variation($bgc-atom-button, -1) !default;
$bgc-atom-button-light-contrast: color-variation($bgc-atom-button, 3) !default;

$sz-atom-button-small: $p-base*4 !default;
$fz-atom-button-small: $fz-s !default;
$icon-sz-atom-button-small: $sz-icon-s !default;
$icon-m-atom-button-small: $m-s !default;
$p-atom-button-small: $p-m !default;

$sz-atom-button: $p-base*5 !default;
$fz-atom-button: $fz-m !default;
$icon-sz-atom-button: $sz-icon-s !default;
$icon-m-atom-button: $m-m !default;
$p-atom-button: $p-l !default;

$sz-atom-button-large: $p-base*6 !default;
$fz-atom-button-large: $fz-m !default;
$icon-sz-atom-button-large: $sz-icon-m !default;
$icon-m-atom-button-large: $m-m !default;
$p-atom-button-large: $p-l !default;

// Set all color properties for text and icons
@mixin button-foreground-color ($color) {
  color: $color;

  & svg path {
    fill: $color;
    stroke: $color;
  }
}
// Sets active states when button is not disabled
@mixin button-focused {
  &:not(.sui-AtomButton--disabled) {
    &.sui-AtomButton--focused,
    &:active,
    &:focus,
    &:hover {
      @content;
    }
  }
}
@mixin button-icon ($size, $margin) {
  & .sui-AtomButton-leftIcon,
  & .sui-AtomButton-rightIcon {
    &,
    & [class*="Icon"] {
      height: $size;
      width: $size;
    }
  }

  & .sui-AtomButton-leftIcon {
    margin-right: $margin;
  }

  & .sui-AtomButton-rightIcon {
    margin-left: $margin;
  }
}

.sui-AtomButton {
  @include reset-button;
  @include button-icon($icon-sz-atom-button, $icon-m-atom-button);
  border: 1px solid;
  border-radius: $bdrs-m;
  box-sizing: border-box;
  display: inline-block;
  font: {
    family: $ff-sans-serif;
    size: $fz-atom-button;
    weight: $fw-semi-bold;
  }
  height: $sz-atom-button;
  line-height: normal;
  min-width: $sz-atom-button;
  outline: 0;
  padding: 0 $p-atom-button;
  white-space: nowrap;

  & + & {
    margin-left: $m-m;
  }

  &-inner {
    align-items: center;
    display: inline-flex;
    height: 100%;
    pointer-events: none;
  }

  // Icons
  &-leftIcon,
  &-rightIcon {
    display: inline-flex;
  }

  // Types and colors
  &--primary {
    @include button-foreground-color($c-white);
    @include button-focused {
      background-color: $bgc-atom-button-dark;
      border-color: $bgc-atom-button-dark;
    }
    background-color: $bgc-atom-button;
    border-color: $bgc-atom-button;
  }

  &--secondary,
  &--tertiary {
    @include button-foreground-color($bgc-atom-button);
    @include button-focused {
      background-color: $bgc-atom-button-light;
    }
  }

  &--tertiary {
    border-color: transparent;
  }

  &--negative {
    &.sui-AtomButton--primary {
      @include button-foreground-color($bgc-atom-button);
      @include button-focused {
        background-color: $bgc-atom-button-light-contrast;
        border-color: $bgc-atom-button-light-contrast;
      }
      background-color: $c-white;
      border-color: $c-white;
    }

    &.sui-AtomButton--secondary,
    &.sui-AtomButton--tertiary {
      @include button-foreground-color($c-white);
      @include button-focused {
        background-color: $bgc-atom-button-dark;
      }
    }
  }

  &--accent {
    @include button-foreground-color($c-white);
    @include button-focused {
      background-color: $c-accent-dark;
      border-color: $c-accent-dark;
    }
    background-color: $c-accent;
    border-color: $c-accent;
  }

  // Modifiers
  &--disabled {
    cursor: not-allowed;
    opacity: .3;
  }

  &--small {
    @include button-icon($icon-sz-atom-button-small, $icon-m-atom-button-small);
    font-size: $fz-atom-button-small;
    height: $sz-atom-button-small;
    min-width: $sz-atom-button-small;
    padding: 0 $p-atom-button-small;
  }

  &--large {
    @include button-icon($icon-sz-atom-button-large, $icon-m-atom-button-large);
    font-size: $fz-atom-button-large;
    height: $sz-atom-button-large;
    min-width: $sz-atom-button-large;
    padding: 0 $p-atom-button-large;
  }

  &--fullWidth {
    justify-content: center;
    width: 100%;
  }

  &--empty {
    .sui-AtomButton-leftIcon,
    .sui-AtomButton-rightIcon {
      margin: 0;
    }
  }

  // Modifiers
  &--link {
    text-decoration: none;
  }
}

